--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
       <div class="footer">©2018 矮鹿防封 &nbsp;&nbsp;|&nbsp;&nbsp;
         <a href="#" target="_blank">使用矮鹿防封前必读</a>&nbsp;&nbsp;|&nbsp;&nbsp; 联系我们：
-        <a href="#">1960520477</a></div>
+        <a href="#"></a></div>
 		<script>
 		var notice_msg = '域名检测300/月（付费请加微信：heimavip1）';
 		var api_host = 'http://pay.jump-api.cn';
