--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <a href="#" target="_blank">使用矮鹿防封前必读</a>&nbsp;&nbsp;|&nbsp;&nbsp; 联系我们：
         <a href="#"></a></div>
 		<script>
-		var notice_msg = '域名检测300/月（付费请加微信：heimavip1）';
+		var notice_msg = '域名检测300/月（付费请加qq：1960520477）';
 		var api_host = 'http://pay.jump-api.cn';
 		function wxcheck_form(){
 			$("#result_panel").hide();
