--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="footer">©2018 矮鹿防封 &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="#" target="_blank">使用矮鹿防封前必读</a>&nbsp;&nbsp;|&nbsp;&nbsp; 联系我们：
+        <a href="#" target="_blank">使用矮鹿防封前必读</a>&nbsp;&nbsp;|&nbsp;&nbsp; 联系我们：jiangm269@gmail.com
         <a href="#"></a></div>
 		<script>
 		var notice_msg = '域名检测300/月（付费请加qq：1960520477）';
