--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 		 <div class="panel" style="background-color:#f3f3f3">
         <div class="panel_inner" style="margin: 70px auto 80px;">
           <h2 >联系我们</h2>
-          <h3 style="color:#000;">域名检测API接口价格低至300元/月，有需要的客户请联系客服：3224328695</h3>
+          <h3 style="color:#000;">域名检测API接口价格低至300元/月，有需要的客户请联系客服：
+	<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2::52" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>	
+	  </h3>
         </div>
       </div> 
 
