--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" type="text/css" href="http://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/ailu_style.css">
     <script src="https://cdn.bootcss.com/jquery/1.12.3/jquery.min.js"></script>
     <script src="http://yunapposs.oss-cn-hangzhou.aliyuncs.com/static/web/layer3/layer.js" charset="utf-8"></script>
-    
+    </head>
     <body>
+	
 		<div class="panel" style="background:url(http://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/point5.png)">
 			<header style="position:absolute;">
 			  <div class="inner">
@@ -69,7 +70,8 @@
         <div class="panel_inner" style="margin: 70px auto 80px;">
           <h2 >联系我们</h2>
           <h3 style="color:#000;">域名检测API接口价格低至300元/月，有需要的客户请联系客服：
-	<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2484885095&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2484885095:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
+		<a class="qqformob" style="display:none;"target="_blank" rel="nofollow" href="mqqwpa://im/chat?chat_type=wpa&amp;uin=2484885095&amp;version=1&amp;src_type=web"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
+					<a class="qqforpc" target="_blank" rel="nofollow" href="tencent://message/?uin=2484885095&amp;Site=1&amp;Menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
 	  </h3>
         </div>
       </div> 
@@ -203,5 +205,17 @@
           s.parentNode.insertBefore(hm, s);
         })();
 		</script>
+		<style>
+
+	@media (max-width: 1100px){
+		.qqformob{
+			display:inline-block;
+		}
+		.qqforpc{
+			display:none;
+		}
+	}
+
+	</style>
     </body>
 </html>
