--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="panel_inner" style="margin: 70px auto 80px;">
           <h2 >联系我们</h2>
           <h3 style="color:#000;">域名检测API接口价格低至300元/月，有需要的客户请联系客服：
-		<a class="qqformob" style="display:none;"target="_blank" rel="nofollow" href="mqqwpa://im/chat?chat_type=wpa&amp;uin=2484885095&amp;version=1&amp;src_type=web"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
+		<a class="qqformob" target="_blank" rel="nofollow" href="mqqwpa://im/chat?chat_type=wpa&amp;uin=2484885095&amp;version=1&amp;src_type=web"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
 					<a class="qqforpc" target="_blank" rel="nofollow" href="tencent://message/?uin=2484885095&amp;Site=1&amp;Menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
 	  </h3>
         </div>
@@ -206,7 +206,9 @@
         })();
 		</script>
 		<style>
-
+	.qqformob{
+		display:none;
+	}
 	@media (max-width: 1100px){
 		.qqformob{
 			display:inline-block;
