--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		 <div class="panel" style="background-color:#f3f3f3">
         <div class="panel_inner" style="margin: 70px auto 80px;">
           <h2 >联系我们</h2>
-          <h3 style="color:#000;">域名检测API接口价格500元/月起，频率不同价格不同，有需要的客户请联系客服：
+          <h3 style="color:#000;">域名检测API接口价格低至300元/月，有需要的客户请联系客服：
 		<a class="qqformob" target="_blank" rel="nofollow" href="mqqwpa://im/chat?chat_type=wpa&amp;uin=2484885095&amp;version=1&amp;src_type=web"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
 					<a class="qqforpc" target="_blank" rel="nofollow" href="tencent://message/?uin=2484885095&amp;Site=1&amp;Menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
 	  </h3>
