--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,7 +13,68 @@
     <script src="http://yunapposs.oss-cn-hangzhou.aliyuncs.com/static/web/layer3/layer.js" charset="utf-8"></script>
     </head>
     <body>
+	<style>
 	
+	.fl{
+	background-color:#fff;
+	
+	}
+	.banners:nth-child(even) {
+		background: #e1e1e1;
+	}
+	.font26 {
+		font-size: 24px;
+		color: #363636;
+		line-height: 100px;
+	}
+	.textcenter {
+		text-align: center;
+	}
+	.actualW {
+		max-width: 1280px;
+		height: auto;
+		margin:0 auto;
+		text-align:center;
+	}
+	.bshadow {
+		box-shadow: 0 0 30px 0 #cfcfcf;
+	}
+	.wid100 {
+		width: 100%;
+	}
+	.tables {
+		width: calc(100% - 40px);
+		text-align: center;
+		margin: 0 20px;
+		border-radius: 10px;
+		margin-bottom: 90px;
+		font-size: 16px;
+	}
+	.tables table {
+		border-radius: 10px;
+		border: 1px double #e1e1e1;
+		border-collapse: collapse;
+	}
+	.tables table tbody {
+		border-radius: 10px;
+	}
+	.tables table tr:first-child {
+		border-radius: 10px 10px 0 0;
+		color: #676767;
+	}
+	.tables table tr:first-child td:first-child {
+		border-radius: 10px 0 0 0;
+	}
+	td {
+		border-top: 1px double #e1e1e1;
+		border-right: 1px double #e1e1e1;
+		background: white;
+	}
+	tr {
+		line-height: 60px;
+	}
+
+</style>
 		<div class="panel" style="background:url(http://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/point5.png)">
 			<header style="position:absolute;">
 			  <div class="inner">
@@ -49,6 +109,47 @@
 				</div>
 			  </div>
 		  </div>
+		  <div class="panel banners fl" id="price">
+
+				<div class="actualW fl">
+					<p class="fl font26 btitlep matop30 textcenter wid100">API接口价格</p>
+					<div class="tables bshadow fl" style="">
+						<table class="fl textcenter wid100">
+							<tbody><tr>
+								<td>接口级别</td>
+								<td>接口频率</td>
+								<td>价格</td>
+								<td>说明</td>
+							</tr>
+							<tr>
+								<td>VIP1</td>
+								<td>1次/秒</td>
+								<td>300/月</td>
+								<td>微信域名检测接口，不限域名，不限次数</td>
+							</tr>
+							<tr>
+								<td>VIP2</td>
+								<td>2次/秒</td>
+								<td>600/月</td>
+								<td>微信域名检测接口，不限域名，不限次数</td>
+							</tr>
+							<tr>
+								<td>VIP3</td>
+								<td>无限/秒</td>
+								<td>1500/月</td>
+								<td>微信域名检测接口，不限域名，不限次数，不限频率</td>
+							</tr>
+							<tr>
+								<td colspan="4"> <h3 style="color:#000;">可提供免费测试，开通接口请联系客服QQ:2484885095
+		<a class="qqformob" target="_blank" rel="nofollow" href="mqqwpa://im/chat?chat_type=wpa&amp;uin=2484885095&amp;version=1&amp;src_type=web"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
+					<a class="qqforpc" target="_blank" rel="nofollow" href="tencent://message/?uin=2484885095&amp;Site=1&amp;Menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1006079161:51" alt="欢迎前来洽谈！" title="欢迎前来洽谈！"></a>
+	  </h3></td>
+							</tr>
+						</tbody></table>
+					</div>
+				</div>
+
+			</div>
 		 <div class="panel" style="background-color:#f3f3f3">
         <div class="panel_inner" style="margin: 70px auto 80px;">
           <h2 >联系我们</h2>
