--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="applicable-device" content="pc,mobile">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="https://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/ailu_base.css">
-    <link rel="stylesheet" type="text/css" href="http://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/ailu_style.css">
-    <script src="https://cdn.bootcss.com/jquery/1.12.3/jquery.min.js"></script>
-    <script src="http://yunapposs.oss-cn-hangzhou.aliyuncs.com/static/web/layer3/layer.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="//templ1.oss-cn-hangzhou.aliyuncs.com/ailu/ailu_base.css">
+    <link rel="stylesheet" type="text/css" href="//templ1.oss-cn-hangzhou.aliyuncs.com/ailu/ailu_style.css">
+    <script src="//cdn.bootcss.com/jquery/1.12.3/jquery.min.js"></script>
+    <script src="//yunapposs.oss-cn-hangzhou.aliyuncs.com/static/web/layer3/layer.js" charset="utf-8"></script>
     
     <body>
 		<div class="panel" style="background:url(http://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/point5.png)">
