--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <ul class="attrs1" style="overflow:hidden;text-align:center;margin: 0 auto;">
             <li class="attr1">
               <div class="attr-box">
-                <img src="https://tigimg-1252093452.image.myqcloud.com/2020/01/21/m7OZQxi26X6hgedCYJFb.png" />
+                <img src="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/m7OZQxi26X6hgedCYJFb.png" />
                 <div class="caption">
                   <p>QQ：629359960</p>
                 </div>
@@ -85,7 +85,7 @@
             </li>
             <li class="attr1">
               <div class="attr-box">
-                <img src="https://tigimg-1252093452.image.myqcloud.com/2020/01/21/DCV7Vj31TM4PLq98nDfh.png" />
+                <img src="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/DCV7Vj31TM4PLq98nDfh.png" />
                 <div class="caption">
                   <p>微信：heimavip1</p>
                 </div>
@@ -101,7 +101,7 @@
           <ul class="attrs" style="width:100%;overflow:hidden">
             <li class="attr">
               <div class="attr-box">
-                <img src="https://tigimg-1252093452.image.myqcloud.com/2019/09/14/0SnwCUFaaS3DqDK61d7K.png" />
+                <img src="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/0SnwCUFaaS3DqDK61d7K.png" />
                 <div class="caption">
                   <h1>线下展会活动防封</h1>
                   <p>防封模型：传单（门票）固定入口二维码+海量落地分享防封</p>
@@ -110,7 +110,7 @@
             </li>
             <li class="attr">
               <div class="attr-box">
-                <img src="https://tigimg-1252093452.image.myqcloud.com/2019/09/14/H6uFMCZf4kwizsiDJCF4.png" />
+                <img src="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/H6uFMCZf4kwizsiDJCF4.png" />
                 <div class="caption">
                   <h1>微信内广告防封</h1>
                   <p>防封模型：入口可变防封+落地页面内容屏蔽+自动检测+轮转</p>
@@ -119,7 +119,7 @@
             </li>
             <li class="attr">
               <div class="attr-box">
-                <img src="https://tigimg-1252093452.image.myqcloud.com/2020/03/01/i7vnAk3m3GKj92QAQeXo.png" />
+                <img src="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/i7vnAk3m3GKj92QAQeXo.png" />
                 <div class="caption">
                   <h1>游戏类APP下载防封</h1>
                   <p>防封模型：微信内打开自动跳转浏览器，下载防封两不误</p>
@@ -128,7 +128,7 @@
             </li>
             <li class="attr">
               <div class="attr-box">
-                <img src="https://tigimg-1252093452.image.myqcloud.com/2019/09/14/AtXcgvI5HihaEwM1KNxM.png" />
+                <img src="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/AtXcgvI5HihaEwM1KNxM.png" />
                 <div class="caption">
                   <h1>重度防封（秒死）</h1>
                   <p>防封模型：微信内容审查屏蔽（有效防止被封，延长域名存活时间）</p>
