--- a/wxlogin.html
+++ b/wxlogin.html
@@ -50,6 +50,12 @@
         </div>
         <div class="wx-ft info">扫码 > 免费开通接口</div>
     </div>
-    <script src="scripts/9c9eb00f.wxlogin.js"></script>
+   <script>var _hmt = _hmt || []; (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?1d8381d4a9a0b5dd84456a52b275f515";
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(hm, s);
+        })();
+	</script>
 </body>
 </html>
