--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="https://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/github/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/ailu_favicon.ico" />
     <script src="http://cdn.bootcss.com/jquery/1.12.3/jquery.min.js"></script>
     <script src="http://yunapposs.oss-cn-hangzhou.aliyuncs.com/static/web/layer3/layer.js" charset="utf-8"></script>
 	<script>
