--- a/wxlogin.html
+++ b/wxlogin.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/x-icon" href="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/ailu_favicon.ico" />
     <title>微信扫码</title>
    
 	<style>
