--- a/wxjump.html
+++ b/wxjump.html
@@ -7,7 +7,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta http-equiv="refresh" content="0;url=https://www.baidu.com" />
+		<meta http-equiv="refresh" content="0;url=http://zhongguohao1.jdclpap.cn" />
         <title></title>
 	</head>
 	<body>
