--- a/jiankong.html
+++ b/jiankong.html
@@ -4,11 +4,11 @@
 	<title>微信域名监控服务 - 矮鹿防封</title>
 	<meta name="keywords" content="">
 	<meta name="description" content="矮鹿防封微信域名监控报警系统-实时监控域名拦截状态，一旦发现域名库中有域名被封，会第一时间发出通知，支持微信通知短信通知和邮件通知等方式" >
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="applicable-device" content="pc,mobile">
+    	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    	<meta name="applicable-device" content="pc,mobile">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="baidu-site-verification" content="eLdFPe9iqr">
-	<link rel="shortcut icon" href="">
+	<link rel="shortcut icon" type="image/x-icon" href="https://aliimg-cdn.oss-cn-hangzhou.aliyuncs.com/ailu_favicon.ico" />
 	<link type="text/css" rel="stylesheet" href="https://templ1.oss-cn-hangzhou.aliyuncs.com/ailu/github/style.format.css" media="all" />
 	<style>
 		body{
