--- a/jiankong.html
+++ b/jiankong.html
@@ -265,7 +265,7 @@
 <script src="http://juhecdn.oss-cn-hangzhou.aliyuncs.com/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="http://yunapposs.oss-cn-hangzhou.aliyuncs.com/static/web/layer3/layer.js" charset="utf-8"></script>
 <script>
-var api_host = '#';
+var api_host = 'http://api.zaiailu.com';
 var my = {};
 function wxcheck_form(){
 	$("#result_panel").hide();
